testsuite/tests/checks/address_specifications_for_local_objects/test.out
address_specifications_for_local_objects.adb:3:7: error: address_specifications_for_local_objects - rule violation
3 |       Tmp : Integer with Address =>
  |       ^^^ 

